Make both sidebars fixed to window and make overflow scrollable. Add show/hide arrow instead of 'Start' and 'X'.

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,13 @@
 }
 
 .control-panel {
-  position: absolute;
-  top: 56px;
+  position: fixed;
+  height: 100vh;
+  overflow: scroll;
+  top: 36px;
   width: 500px;
   right: -500px;
+  padding: 20px 0;
   transition: all 0.3s;
 }
 
